crates/codeowners/tests/snapshots/codeowners_generator_test__generates_gitlab.snap
---
source: crates/codeowners/tests/codeowners_generator_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".gitlab/CODEOWNERS\")).unwrap()"
---
# Automatically generated by moon. DO NOT MODIFY!
# https://moonrepo.dev/docs/guides/codeowners

# (workspace)
* @admins
/config @infra
/*.js @infra @frontend

# custom-groups
[custom-groups]
/custom-groups/path/with\ space/ @@@group

# list-paths
^[list-paths] @frontend
/list-paths/*.{js,ts,tsx}
/list-paths/*.config.js

# map-paths
[map-paths][3]
/map-paths/config/ @backend
/map-paths/*.rs @rust-dev @api-team


